fitur 3 semoga bener fix

--- a/src/main/resources/templates/fragments/fragment.html
+++ b/src/main/resources/templates/fragments/fragment.html
@@ -14,13 +14,26 @@
 	<body>
 		<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<a class="navbar-brand" href="/" th:text="SIPEG"></a>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+<div class="collapse navbar-collapse" id="navbarNavDropdown">	
+			<ul class="navbar-nav">
+            	<li class="nav-item">
 					<a class="nav-link" href="/">Home</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/pegawai/tambah">Tambah Pegawai</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="/jabatan/tambah">Tambah Jabatan</a>
+				</li>	
+				<li class="nav-item">	
 					<a class="nav-link" href="/pegawai/cari">Cari Pegawai</a>
+				</li>	
+				<li class="nav-item">	
 					<a class="nav-link" href="/jabatan/viewall">Lihat Semua Jabatan</a>
+				</li>
 				</ul>
 			</div>
 		</nav>
