--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -2,8 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>500 Internal Server Error</title>
+	<object th:include="fragments/fragment :: css" th:remove="tag"></object>
+	<object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+	<nav th:replace="fragments/fragment :: navbar"></nav>
 	<h2 align="center">Error, silahkan coba lagi</h2>
 </body>
 </html>
