--- a/src/main/resources/templates/tambah-pegawai.html
+++ b/src/main/resources/templates/tambah-pegawai.html
@@ -53,7 +53,7 @@
 						  <br> Jabatan: <br> (Pilih jabatan yang diinginkan,
 							bisa lebih dari satu)
 
-							<table border="1">
+							<table class= "table table-bordered" style="width:100%" >
 								<tr th:each="jabatan,iterationStatus : ${listJabatan}">
 									<td th:text="${iterationStatus.count}"></td>
 									<td th:text="${jabatan.nama}"></td>
