--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -7,6 +7,16 @@
 </head>
 <body>
 	<nav th:replace="fragments/fragment :: navbar"></nav>
-	<h2 align="center">Error, isikan parameter dengan benar</h2>
+	<div id="App">
+        <div class="container" style="margin-top: 40px; padding-bottom: 30px">
+		<div class="row">
+			<div class="col-12">
+				<h1>OH NO, Bad Request :(</h1>
+				<hr>
+				<p>Error, isikan parameter dengan benar</p>
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
