--- a/src/main/resources/templates/sukses-tambah-jabatan.html
+++ b/src/main/resources/templates/sukses-tambah-jabatan.html
@@ -11,8 +11,10 @@
 <body>
 	<nav th:replace="fragments/fragment :: navbar"></nav>
 	<br>
-	<div class="container-fluid">
-	<h4>Sukses!</h4>
-	<p th:text="'Jabatan ' + ${jabatan.nama} + ' berhasil ditambahkan'"></p>
+	<div id="Content" class="container-full-bg">
+    <div class="container vertical-center" style="padding-top: 32px;">
+		<h1><b>Sukses!</b></h1>
+		<h3 th:text="'Jabatan ' + ${jabatan.nama} + ' berhasil ditambahkan'"></h3>
+	</div>
 	</div>
 </html>
