--- a/src/main/resources/templates/hapus-jabatan-gagal.html
+++ b/src/main/resources/templates/hapus-jabatan-gagal.html
@@ -10,10 +10,12 @@
 
 <body>
 	<nav th:replace="fragments/fragment :: navbar"></nav>
-	<br>
-	<div class="container-fluid">
-	<h4>Gagal!</h4>
-	<p th:text="'Jabatan ' + ${jabatan.nama} + ' tidak bisa dihapus, ada pegawai yang memiliki jabatan tersebut'"></p>
+	
+	<div id="Content" class="container-full-bg">
+    <div class="container vertical-center" style="padding-top: 32px;">
+		<h1><b>Gagal!</b></h1>
+		<h3 th:text="'Jabatan ' + ${jabatan.nama} + ' tidak bisa dihapus, ada pegawai yang memiliki jabatan tersebut'"></h3>
+	</div>
 	</div>
 	</body>
 </html>
