--- a/src/main/resources/templates/view-jabatan.html
+++ b/src/main/resources/templates/view-jabatan.html
@@ -24,7 +24,7 @@
 							</tr>
 						<tr>
 								<th scope="row">Gaji Pokok:</th>
-								<td th:text="'Rp ' + ${jabatan.gajiPokok}"></td>
+								<td th:text="'Rp. ' + ${jabatan.gajiPokok}"></td>
 						</tr>
 						
 					<tbody>
