--- a/src/main/resources/templates/view-tertua-termuda.html
+++ b/src/main/resources/templates/view-tertua-termuda.html
@@ -51,7 +51,7 @@
 						</tr>
 						<tr>
 						 <td><b>Gaji</b></td>
-						<td th:text="'Rp' + ${gajiLengkapTermuda}"></td>
+						<td th:text="'Rp. ' + ${gajiLengkapTermuda}"></td>
 						</tr>
 						</tbody>
 						</table>
@@ -103,7 +103,7 @@
 						</tr>
 						<tr>
 							<td><b>Gaji</b></td>
-						<td th:text="'Rp' + ${gajiLengkapTertua}"></td>
+						<td th:text="'Rp. ' + ${gajiLengkapTertua}"></td>
 						</tr>
 						</tbody>
 						</table>
